# columnar_engine

./: CMakeLists.txt
src/: CMakeLists.txt  column.cpp  column.h  columnar_reader.cpp  columnar_reader.h  columnar_to_csv.cpp  columnar_writer.cpp  columnar_writer.h  csv.h  csv_reader.cpp  csv_reader.h  csv_to_columnar.cpp  csv_to_db.cpp  csv_writer.cpp  csv_writer.h  db_to_csv.cpp  file_reader.h  file_writer.h  metadata.cpp  metadata.h  schema.cpp  schema.h  type.cpp  type.h
tests/: CMakeLists.txt  test_csv_reader.cpp  test_csv_writer.cpp  test_schema.cpp  utility.h
